--- a/src/main.css
+++ b/src/main.css
@@ -568,6 +568,22 @@ video {
   bottom: 0px;
 }
 
+.top-0 {
+  top: 0px;
+}
+
+.-bottom-\[30\%\] {
+  bottom: -30%;
+}
+
+.-bottom-\[32\%\] {
+  bottom: -32%;
+}
+
+.-bottom-\[31\%\] {
+  bottom: -31%;
+}
+
 .z-20 {
   z-index: 20;
 }
@@ -696,6 +712,38 @@ video {
   height: 100lvh;
 }
 
+.h-\[-100\%\] {
+  height: -100%;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[1000px\] {
+  height: 1000px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
 .w-20 {
   width: 5rem;
 }
@@ -748,6 +796,10 @@ video {
   width: 100%;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .min-w-\[219\.65px\] {
   min-width: 219.65px;
 }
@@ -762,6 +814,18 @@ video {
 
 .min-w-\[456px\] {
   min-width: 456px;
+}
+
+.min-w-\[450px\] {
+  min-width: 450px;
+}
+
+.min-w-\[400px\] {
+  min-width: 400px;
+}
+
+.min-w-\[300px\] {
+  min-width: 300px;
 }
 
 .skew-x-20 {
@@ -825,6 +889,14 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-b-lg {
@@ -909,8 +981,9 @@ video {
   background-color: rgb(249 208 35 / var(--tw-bg-opacity));
 }
 
-.bg-hero-bg {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),url("/src/images/hero-bg.png");
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-transparent-bg {
@@ -925,8 +998,14 @@ video {
   background-position: center;
 }
 
-.bg-no-repeat {
-  background-repeat: no-repeat;
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.object-scale-down {
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
 
 .p-8 {
@@ -973,6 +1052,21 @@ video {
   padding-bottom: 8.54px;
 }
 
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1015,6 +1109,10 @@ video {
 
 .pt-\[8rem\] {
   padding-top: 8rem;
+}
+
+.pt-\[9rem\] {
+  padding-top: 9rem;
 }
 
 .text-left {
@@ -1160,6 +1258,22 @@ video {
   color: rgb(249 208 35 / var(--tw-text-opacity));
 }
 
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-40 {
+  opacity: 0.4;
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1231,6 +1345,14 @@ video {
     bottom: -3rem;
   }
 
+  .lg\:bottom-\[5\%\] {
+    bottom: 5%;
+  }
+
+  .lg\:bottom-\[4\%\] {
+    bottom: 4%;
+  }
+
   .lg\:my-\[8rem\] {
     margin-top: 8rem;
     margin-bottom: 8rem;
@@ -1280,6 +1402,10 @@ video {
     height: 90.78px;
   }
 
+  .lg\:h-\[700px\] {
+    height: 700px;
+  }
+
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1316,6 +1442,10 @@ video {
     width: 97.55px;
   }
 
+  .lg\:w-\[458px\] {
+    width: 458px;
+  }
+
   .lg\:min-w-\[384px\] {
     min-width: 384px;
   }
@@ -1326,6 +1456,10 @@ video {
 
   .lg\:min-w-\[525px\] {
     min-width: 525px;
+  }
+
+  .lg\:min-w-\[400px\] {
+    min-width: 400px;
   }
 
   .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1380,6 +1514,11 @@ video {
     padding-bottom: 5rem;
   }
 
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .lg\:pb-8 {
     padding-bottom: 2rem;
   }
@@ -1396,16 +1535,36 @@ video {
     padding-top: 4rem;
   }
 
-  .lg\:pt-\[10rem\] {
-    padding-top: 10rem;
-  }
-
   .lg\:pt-\[11\.5rem\] {
     padding-top: 11.5rem;
   }
 
   .lg\:pt-\[5rem\] {
     padding-top: 5rem;
+  }
+
+  .lg\:pt-\[12rem\] {
+    padding-top: 12rem;
+  }
+
+  .lg\:pt-\[16rem\] {
+    padding-top: 16rem;
+  }
+
+  .lg\:pt-\[18rem\] {
+    padding-top: 18rem;
+  }
+
+  .lg\:pt-\[20rem\] {
+    padding-top: 20rem;
+  }
+
+  .lg\:pt-\[17rem\] {
+    padding-top: 17rem;
+  }
+
+  .lg\:pt-\[15rem\] {
+    padding-top: 15rem;
   }
 
   .lg\:text-center {
@@ -1495,12 +1654,36 @@ video {
     bottom: 5%;
   }
 
+  .xl\:bottom-\[8\%\] {
+    bottom: 8%;
+  }
+
   .xl\:mt-\[6rem\] {
     margin-top: 6rem;
   }
 
+  .xl\:mb-\[1rem\] {
+    margin-bottom: 1rem;
+  }
+
+  .xl\:mb-\[8rem\] {
+    margin-bottom: 8rem;
+  }
+
+  .xl\:mb-\[16rem\] {
+    margin-bottom: 16rem;
+  }
+
   .xl\:h-\[600px\] {
     height: 600px;
+  }
+
+  .xl\:h-\[700px\] {
+    height: 700px;
+  }
+
+  .xl\:w-\[600px\] {
+    width: 600px;
   }
 
   .xl\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
@@ -1512,5 +1695,14 @@ video {
   .xl\:px-40 {
     padding-left: 10rem;
     padding-right: 10rem;
+  }
+
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .xl\:pt-\[17rem\] {
+    padding-top: 17rem;
   }
 }
