--- a/src/main.css
+++ b/src/main.css
@@ -597,6 +597,11 @@ video {
   margin-right: auto;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -622,12 +627,21 @@ video {
   margin-bottom: 8px;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .-mb-\[10px\] {
   margin-bottom: -10px;
 }
 
 .-mt-\[0\.5rem\] {
   margin-top: -0.5rem;
+}
+
+.-mt-\[3rem\] {
+  margin-top: -3rem;
 }
 
 .mb-12 {
@@ -682,8 +696,28 @@ video {
   margin-top: 4rem;
 }
 
+.mt-\[6rem\] {
+  margin-top: 6rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-\[1rem\] {
+  margin-bottom: 1rem;
+}
+
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .grid {
@@ -706,6 +740,10 @@ video {
   height: 1.16px;
 }
 
+.h-\[1\.3px\] {
+  height: 1.3px;
+}
+
 .h-\[12px\] {
   height: 12px;
 }
@@ -716,6 +754,14 @@ video {
 
 .h-\[15px\] {
   height: 15px;
+}
+
+.h-\[16px\] {
+  height: 16px;
+}
+
+.h-\[191\.33px\] {
+  height: 191.33px;
 }
 
 .h-\[261\.33px\] {
@@ -762,16 +808,8 @@ video {
   height: 100lvh;
 }
 
-.h-\[1\.3px\] {
-  height: 1.3px;
-}
-
-.h-\[191\.33px\] {
-  height: 191.33px;
-}
-
-.h-\[191px\] {
-  height: 191px;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-20 {
@@ -782,6 +820,10 @@ video {
   width: 1.5rem;
 }
 
+.w-\[100px\] {
+  width: 100px;
+}
+
 .w-\[12px\] {
   width: 12px;
 }
@@ -790,12 +832,20 @@ video {
   width: 13px;
 }
 
+.w-\[156\.56px\] {
+  width: 156.56px;
+}
+
 .w-\[15px\] {
   width: 15px;
 }
 
 .w-\[160\.53px\] {
   width: 160.53px;
+}
+
+.w-\[16px\] {
+  width: 16px;
 }
 
 .w-\[219\.65px\] {
@@ -834,12 +884,8 @@ video {
   width: 100%;
 }
 
-.w-\[40px\] {
-  width: 40px;
-}
-
-.w-\[100px\] {
-  width: 100px;
+.min-w-\[160\.65px\] {
+  min-width: 160.65px;
 }
 
 .min-w-\[219\.65px\] {
@@ -862,10 +908,6 @@ video {
   min-width: 456px;
 }
 
-.min-w-\[160\.65px\] {
-  min-width: 160.65px;
-}
-
 .skew-x-20 {
   --tw-skew-x: 320deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -875,16 +917,8 @@ video {
   cursor: pointer;
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -893,6 +927,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 
 .items-center {
@@ -911,29 +949,8 @@ video {
   justify-content: space-between;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.gap-y-2 {
-  row-gap: 0.5rem;
-}
-
-.gap-y-3 {
-  row-gap: 0.75rem;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -954,10 +971,22 @@ video {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .space-y-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-x-scroll {
@@ -1009,6 +1038,10 @@ video {
   border-top-right-radius: 0.375rem;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .border-l-2 {
   border-left-width: 2px;
 }
@@ -1024,6 +1057,11 @@ video {
 .border-grayDarker {
   --tw-border-opacity: 1;
   border-color: rgb(217 217 217 / var(--tw-border-opacity));
+}
+
+.border-grey200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(176 176 176 / var(--tw-border-opacity));
 }
 
 .border-purplePrimary {
@@ -1093,8 +1131,17 @@ video {
      object-fit: cover;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-8 {
   padding: 2rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-4 {
@@ -1152,9 +1199,14 @@ video {
   padding-bottom: 8.54px;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-\[2rem\] {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-\[3rem\] {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .pb-4 {
@@ -1185,6 +1237,10 @@ video {
   padding-top: 3rem;
 }
 
+.pt-\[4\.5rem\] {
+  padding-top: 4.5rem;
+}
+
 .pt-\[5\.5rem\] {
   padding-top: 5.5rem;
 }
@@ -1205,12 +1261,8 @@ video {
   padding-top: 9rem;
 }
 
-.pt-\[3\.5rem\] {
-  padding-top: 3.5rem;
-}
-
-.pt-\[4\.5rem\] {
-  padding-top: 4.5rem;
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .text-left {
@@ -1286,6 +1338,10 @@ video {
   font-size: 38px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
 .text-\[65\.13px\] {
   font-size: 65.13px;
 }
@@ -1302,12 +1358,12 @@ video {
   font-size: 8px;
 }
 
-.text-\[9px\] {
-  font-size: 9px;
+.text-\[9\.8px\] {
+  font-size: 9.8px;
 }
 
-.text-\[40px\] {
-  font-size: 40px;
+.text-\[9px\] {
+  font-size: 9px;
 }
 
 .font-bold {
@@ -1354,6 +1410,11 @@ video {
   color: rgb(18 18 18 / var(--tw-text-opacity));
 }
 
+.text-grey300 {
+  --tw-text-opacity: 1;
+  color: rgb(109 109 109 / var(--tw-text-opacity));
+}
+
 .text-purplePrimary {
   --tw-text-opacity: 1;
   color: rgb(84 35 124 / var(--tw-text-opacity));
@@ -1398,10 +1459,6 @@ video {
   scrollbar-width: none;
   /* Firefox */
 }
-
-/* .search-bar > input:focus {
-    outline: none;
-} */
 
 .hover\:bg-purpleLight:hover {
   --tw-bg-opacity: 1;
@@ -1478,6 +1535,10 @@ video {
     margin-top: 8rem;
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1500,6 +1561,10 @@ video {
 
   .lg\:h-\[2\.9px\] {
     height: 2.9px;
+  }
+
+  .lg\:h-\[3\.4px\] {
+    height: 3.4px;
   }
 
   .lg\:h-\[30px\] {
@@ -1526,10 +1591,6 @@ video {
     height: 96px;
   }
 
-  .lg\:h-\[3\.4px\] {
-    height: 3.4px;
-  }
-
   .lg\:w-1\/2 {
     width: 50%;
   }
@@ -1544,6 +1605,10 @@ video {
 
   .lg\:w-\[13\.98px\] {
     width: 13.98px;
+  }
+
+  .lg\:w-\[200px\] {
+    width: 200px;
   }
 
   .lg\:w-\[284px\] {
@@ -1566,6 +1631,10 @@ video {
     width: 411px;
   }
 
+  .lg\:w-\[416px\] {
+    width: 416px;
+  }
+
   .lg\:w-\[418\.96px\] {
     width: 418.96px;
   }
@@ -1584,18 +1653,6 @@ video {
 
   .lg\:w-\[97\.55px\] {
     width: 97.55px;
-  }
-
-  .lg\:w-\[100px\] {
-    width: 100px;
-  }
-
-  .lg\:w-\[200px\] {
-    width: 200px;
-  }
-
-  .lg\:w-\[416px\] {
-    width: 416px;
   }
 
   .lg\:min-w-\[384px\] {
@@ -1626,6 +1683,10 @@ video {
     justify-content: flex-start;
   }
 
+  .lg\:justify-end {
+    justify-content: flex-end;
+  }
+
   .lg\:justify-center {
     justify-content: center;
   }
@@ -1654,6 +1715,12 @@ video {
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
   .lg\:p-12 {
     padding: 3rem;
   }
@@ -1662,14 +1729,19 @@ video {
     padding: 2rem;
   }
 
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .lg\:px-40 {
     padding-left: 10rem;
     padding-right: 10rem;
+  }
+
+  .lg\:px-60 {
+    padding-left: 15rem;
+    padding-right: 15rem;
   }
 
   .lg\:px-8 {
@@ -1702,9 +1774,9 @@ video {
     padding-bottom: 6rem;
   }
 
-  .lg\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  .lg\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
   }
 
   .lg\:pb-8 {
@@ -1717,6 +1789,10 @@ video {
 
   .lg\:pr-8 {
     padding-right: 2rem;
+  }
+
+  .lg\:pr-\[20px\] {
+    padding-right: 20px;
   }
 
   .lg\:pt-16 {
@@ -1737,6 +1813,22 @@ video {
 
   .lg\:pt-\[5rem\] {
     padding-top: 5rem;
+  }
+
+  .lg\:pt-\[6rem\] {
+    padding-top: 6rem;
+  }
+
+  .lg\:pr-\[6rem\] {
+    padding-right: 6rem;
+  }
+
+  .lg\:pr-80 {
+    padding-right: 20rem;
+  }
+
+  .lg\:pr-60 {
+    padding-right: 15rem;
   }
 
   .lg\:text-center {
@@ -1825,7 +1917,7 @@ video {
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1240px) {
   .xl\:bottom-\[5\%\] {
     bottom: 5%;
   }
@@ -1834,10 +1926,20 @@ video {
     margin-top: 6rem;
   }
 
+  .xl\:block {
+    display: block;
+  }
+
   .xl\:space-x-16 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(4rem * var(--tw-space-x-reverse));
     margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .xl\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .xl\:px-20 {
@@ -1853,6 +1955,11 @@ video {
   .xl\:px-60 {
     padding-left: 15rem;
     padding-right: 15rem;
+  }
+
+  .xl\:px-80 {
+    padding-left: 20rem;
+    padding-right: 20rem;
   }
 
   .xl\:pt-\[17rem\] {
