--- a/src/main.css
+++ b/src/main.css
@@ -556,10 +556,6 @@ video {
   bottom: -2rem;
 }
 
-.-bottom-\[25\%\] {
-  bottom: -25%;
-}
-
 .-bottom-\[30\%\] {
   bottom: -30%;
 }
@@ -630,6 +626,16 @@ video {
 .my-\[8px\] {
   margin-top: 8px;
   margin-bottom: 8px;
+}
+
+.my-\[5rem\] {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.my-\[6rem\] {
+  margin-top: 6rem;
+  margin-bottom: 6rem;
 }
 
 .-mb-\[10px\] {
@@ -744,10 +750,6 @@ video {
   height: 12px;
 }
 
-.h-\[151px\] {
-  height: 151px;
-}
-
 .h-\[15px\] {
   height: 15px;
 }
@@ -784,10 +786,6 @@ video {
   height: 54px;
 }
 
-.h-\[600px\] {
-  height: 600px;
-}
-
 .h-\[8\.5px\] {
   height: 8.5px;
 }
@@ -822,6 +820,10 @@ video {
 
 .w-\[12px\] {
   width: 12px;
+}
+
+.w-\[130px\] {
+  width: 130px;
 }
 
 .w-\[13px\] {
@@ -880,10 +882,6 @@ video {
   width: 100%;
 }
 
-.w-\[130px\] {
-  width: 130px;
-}
-
 .min-w-\[160\.65px\] {
   min-width: 160.65px;
 }
@@ -902,10 +900,6 @@ video {
 
 .min-w-\[300px\] {
   min-width: 300px;
-}
-
-.min-w-\[456px\] {
-  min-width: 456px;
 }
 
 .skew-x-20 {
@@ -1116,10 +1110,6 @@ video {
   background-size: cover;
 }
 
-.bg-center {
-  background-position: center;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1206,10 +1196,6 @@ video {
   padding-bottom: 6rem;
 }
 
-.pl-8 {
-  padding-left: 2rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1220,6 +1206,10 @@ video {
 
 .pt-\[12rem\] {
   padding-top: 12rem;
+}
+
+.pt-\[2rem\] {
+  padding-top: 2rem;
 }
 
 .pt-\[3rem\] {
@@ -1250,10 +1240,6 @@ video {
   padding-top: 9rem;
 }
 
-.pt-\[2rem\] {
-  padding-top: 2rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1272,11 +1258,6 @@ video {
 
 .font-montserrat {
   font-family: Montserrat, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .text-\[10px\] {
@@ -1323,6 +1304,10 @@ video {
   font-size: 27px;
 }
 
+.text-\[36px\] {
+  font-size: 36px;
+}
+
 .text-\[38px\] {
   font-size: 38px;
 }
@@ -1353,14 +1338,6 @@ video {
 
 .text-\[9px\] {
   font-size: 9px;
-}
-
-.text-\[34px\] {
-  font-size: 34px;
-}
-
-.text-\[36px\] {
-  font-size: 36px;
 }
 
 .font-bold {
@@ -1511,11 +1488,6 @@ video {
     bottom: 4%;
   }
 
-  .lg\:my-\[8rem\] {
-    margin-top: 8rem;
-    margin-bottom: 8rem;
-  }
-
   .lg\:my-0 {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -1526,8 +1498,17 @@ video {
     margin-bottom: 1rem;
   }
 
+  .lg\:my-\[8rem\] {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+  }
+
   .lg\:-mt-\[1rem\] {
     margin-top: -1rem;
+  }
+
+  .lg\:-mt-\[6rem\] {
+    margin-top: -6rem;
   }
 
   .lg\:mb-0 {
@@ -1544,10 +1525,6 @@ video {
 
   .lg\:mt-\[8rem\] {
     margin-top: 8rem;
-  }
-
-  .lg\:-mt-\[6rem\] {
-    margin-top: -6rem;
   }
 
   .lg\:block {
@@ -1582,6 +1559,10 @@ video {
     height: 30px;
   }
 
+  .lg\:h-\[38px\] {
+    height: 38px;
+  }
+
   .lg\:h-\[489px\] {
     height: 489px;
   }
@@ -1600,10 +1581,6 @@ video {
 
   .lg\:h-\[96px\] {
     height: 96px;
-  }
-
-  .lg\:h-\[38px\] {
-    height: 38px;
   }
 
   .lg\:w-1\/2 {
@@ -1668,10 +1645,6 @@ video {
 
   .lg\:w-\[97\.55px\] {
     width: 97.55px;
-  }
-
-  .lg\:w-\[300px\] {
-    width: 300px;
   }
 
   .lg\:min-w-\[384px\] {
@@ -1814,10 +1787,6 @@ video {
     padding-right: 15rem;
   }
 
-  .lg\:pr-8 {
-    padding-right: 2rem;
-  }
-
   .lg\:pt-16 {
     padding-top: 4rem;
   }
@@ -1929,10 +1898,6 @@ video {
 }
 
 @media (min-width: 1240px) {
-  .xl\:bottom-\[5\%\] {
-    bottom: 5%;
-  }
-
   .xl\:mt-\[6rem\] {
     margin-top: 6rem;
   }
